--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "preview": "vite preview",
     "lint": "eslint src",
     "fix": "eslint src --fix",
-    "prepare": "husky install"
+    "preinstall": "node ./src/scripts/preinstall.js"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "element-plus": "^2.8.1",
     "vue": "^3.4.37"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.4.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.9.1",
     "@vitejs/plugin-vue": "^5.1.2",
     "eslint": "^9.9.1",
