--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "lint": "eslint src",
-    "fix": "eslint src --fix",
-    "preinstall": "node ./src/scripts/preinstall.js"
+    "lint": "eslint src"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
@@ -17,8 +15,6 @@
     "vue": "^3.4.37"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.4.0",
-    "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.9.1",
     "@vitejs/plugin-vue": "^5.1.2",
     "eslint": "^9.9.1",
@@ -33,15 +29,6 @@
     "prettier": "^3.3.3",
     "sass": "^1.77.8",
     "sass-loader": "^16.0.1",
-    "stylelint": "^16.8.2",
-    "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-recess-order": "^5.1.0",
-    "stylelint-config-recommended-scss": "^14.1.0",
-    "stylelint-config-standard": "^36.0.1",
-    "stylelint-config-standard-scss": "^13.1.0",
-    "stylelint-config-standard-vue": "^1.0.0",
-    "stylelint-order": "^6.0.4",
-    "stylelint-scss": "^6.5.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.2.0",
     "vite": "^5.4.1",
