--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
+    "build:prod": "vue-tsc -b && vite build --mode production",
     "preview": "vite preview",
     "lint": "eslint src"
   },
@@ -32,6 +33,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.2.0",
     "vite": "^5.4.1",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^2.0.29"
   }
 }
