--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.5",
     "element-plus": "^2.8.1",
     "vue": "^3.4.37"
   },
@@ -24,6 +25,7 @@
     "eslint-plugin-vue": "^9.27.0",
     "globals": "^15.9.0",
     "husky": "^8.0.0",
+    "mockjs": "^1.1.0",
     "postcss": "^8.4.41",
     "postcss-html": "^1.7.0",
     "postcss-scss": "^4.0.9",
@@ -33,6 +35,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.2.0",
     "vite": "^5.4.1",
+    "vite-plugin-mock": "^3.0.2",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^2.0.29"
   }
