--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.5",
     "element-plus": "^2.8.1",
-    "vue": "^3.4.37"
+    "pinia": "^2.2.2",
+    "vue": "^3.4.37",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
