--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.5",
     "element-plus": "^2.8.1",
+    "nprogress": "^0.2.0",
     "pinia": "^2.2.2",
     "vue": "^3.4.37",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.1.2",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
