--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 NODE_ENV = 'development'
 VITE_APP_TITLE = '英明甄选平台'
 VITE_APP_BASE_API = '/api'
-VITE_SERVE = 'http://139.198.104.58:8212'
+VITE_SERVE = 'http://sph-api.atguigu.cn'
